--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git://github.com/timbit123/ADXL345.git"
   },
+  "dependencies": {
+   "i2c" : "*",
+   "async" : "*"
+  },
   "keywords": [
     "adxl345",
     "nodejs",
